# RL_2025_Technical_Project

./: README.md
ros2_fra2mo/config/: explore.yaml  navigation.yaml  slam.yaml
ros2_fra2mo/launch/: fra2mo_navigation.launch.py
ros2_fra2mo/urdf/: camera.xacro  fra2mo.urdf.xacro  lidar_gazebo_macro.xacro
ros2_iiwa/iiwa_description/config/: base_frame.yaml  iiwa_controllers.yaml
ros2_iiwa/iiwa_description/gazebo/: iiwa.gazebo.xacro
ros2_iiwa/iiwa_description/urdf/: camera.xacro  iiwa.urdf.xacro
ros2_kdl_package/config/: param.yaml
ros2_kdl_package/launch/: gaz.launch.py
warehouse_project/: CMakeLists.txt  package.xml
warehouse_project/launch/: warehouse_launch.py
warehouse_project/maps/: mappa_warehouse.pgm  mappa_warehouse.yaml
warehouse_project/models/aruco_blue/: model.config  model.sdf
warehouse_project/models/aruco_green/: model.config  model.sdf
warehouse_project/models/aruco_iiwa/: model.config  model.sdf
warehouse_project/models/aruco_red/: model.config  model.sdf
warehouse_project/models/aruco_tag_clothes/: model.config  model.sdf
warehouse_project/models/aruco_tag_med/: model.config  model.sdf
warehouse_project/models/aruco_tag_toys/: model.config  model.sdf
warehouse_project/src/: fra2mo_task_manager.cpp  iiwa_task_manager.cpp
warehouse_project/worlds/: warehouse.world
